--- a/platforms/android/include.gradle
+++ b/platforms/android/include.gradle
@@ -4,10 +4,10 @@ buildscript {
     }
     dependencies {
         // https://github.com/OneSignal/OneSignal-Gradle-Plugin
-        classpath 'gradle.plugin.com.onesignal:onesignal-gradle-plugin:[0.10.1, 0.99.99]'
+        classpath 'gradle.plugin.com.onesignal:onesignal-gradle-plugin:[0.12.4, 0.99.99]'
     }
 }
-apply plugin: com.onesignal.androidsdk.GradleProjectPlugin
+apply plugin: 'com.onesignal.androidsdk.onesignal-gradle-plugin'
 
 android {
 	productFlavors {
@@ -27,5 +27,5 @@ android {
 }
 
 dependencies {
-	compile 'com.onesignal:OneSignal:3.9.1'
+	implementation 'com.onesignal:OneSignal:[3.11.2, 3.99.99]'
 }
